<resources>
    <string name="app_name">InstaClone</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="choose_image_from_gallery">Image from gallery</string>
    <string name="filter_image">Filter</string>
    <string name="heal">Heal</string>
    <string name="upload">Upload</string>
    <string name="like">Like</string>
    <string name="logout">Logout</string>
    <string name="title_activity_maps">Map</string>
    <string name="view_on_map">View On Map</string>
    <string name="theme_default">Blue</string>
    <string name="take_picture">Take Picture</string>
</resources>
