<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="za.co.myconcepts.instaclone.activities.Register">

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/etPassword"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp" />

    <EditText
    android:id="@+id/etPassword"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:ems="10"
    android:inputType="textPassword"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    android:layout_marginBottom="8dp"
    app:layout_constraintBottom_toTopOf="@+id/guideline"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="32dp"
    android:hint="@string/password"
    app:layout_constraintTop_toTopOf="@+id/guideline"
    android:layout_marginTop="0dp"
        app:layout_constraintVertical_bias="0.411" />

    <EditText
        android:id="@+id/etPasswordConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:layout_marginTop="-1dp"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="32dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginRight="32dp"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordConfirm"
        android:onClick="register"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.39" />

</android.support.constraint.ConstraintLayout>
