<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="za.co.myconcepts.instaclone.activities.ChooseImage">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTakePicture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:onClick="takePicture"
        android:text="@string/take_picture"
        app:layout_constraintTop_toBottomOf="@+id/include"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline3"
        android:layout_marginRight="0dp" />

    <Button
        android:id="@+id/btnGalleryImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:onClick="chooseImageFromGallery"
        android:text="@string/choose_image_from_gallery"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="-1dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0" />

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="0dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGalleryImage"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:color/darker_gray" />

    <TextView
        android:id="@+id/tvCityName"
        android:layout_width="0dp"
        android:background="#8888"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:singleLine="true"
        android:textColor="#FFFFFF"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/btnTakePicture"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="8dp"
        android:visibility="gone"/>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        map:layout_constraintBottom_toTopOf="@+id/btnUpload"
        map:layout_constraintHorizontal_bias="0.0"
        map:layout_constraintLeft_toLeftOf="parent"
        map:layout_constraintRight_toRightOf="parent"
        map:layout_constraintTop_toTopOf="@+id/guideline2"
        tools:context="za.co.myconcepts.instaclone.activities.ChooseImage"
        tools:layout="@layout/activity_profile"
        map:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnFilter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="8dp"
        android:onClick="filter"
        android:text="@string/filter_image"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btnHeal"
        android:layout_marginRight="0dp" />

    <Button
        android:id="@+id/btnHeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="8dp"
        android:text="@string/heal"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintRight_toLeftOf="@+id/guideline3"
        android:layout_marginRight="0dp"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintLeft_toLeftOf="@+id/guideline3"
        android:onClick="heal"/>

    <Button
        android:id="@+id/btnDetectFace"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="detectFace"
        android:text="Detect Face"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        android:layout_marginRight="7dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btnHeal"
        android:layout_marginLeft="0dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:onClick="uploadImage"
        android:text="Upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteX="192dp"
        tools:layout_editor_absoluteY="0dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />
</android.support.constraint.ConstraintLayout>
